2006-08-31  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Add missing includes to a few test
	programs.  (#353580, Chris Wilson)

2006-08-30  Matthias Clasen  <mclasen@redhat.com>

	* glib/gmarkup.c (g_markup_vprintf_escaped): Don't call
	va_end on caller-provided va_args.  (#353584, Chris Wilson)

	* Bump version

	* === Released 2.12.3 ===

	* NEWS: Updates

2006-08-27  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Fix the pthread compiler flag detection more.

	* configure.in: Check for clock_gettime.
	* glib/gtimer.c: Use Posix monotonic clocks instead of 
	gettimeofday when available.  (#336114, William Jon McCann)

2006-08-25  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Fix the pthread compiler flag detection.

	* glib/gunicode.h: 
	* glib/gutf8.c (_g_utf8_make_valid): Rename make_valid_utf8
	from gconvert.c, move it to gutf8.c, and export it privately.

	* glib/gconvert.c (g_filename_display_name): Adjust callers.

	* glib/gkeyfile.c: Use _g_utf8_make_valid() in a number of
	places to ensure error messages are valid UTF-8.  (#351853,
	Simon Budig)

2006-08-20  Tor Lillqvist  <tml@novell.com>

	* glib/gnulib/vasnprintf.c (vasnprintf): Fix crash when printing
	large 64-bit values on Win32 using the %I64x format. (#351034,
	Neil Piercy)

Wed Aug 16 13:59:07 2006  Tim Janik  <timj@gtk.org>

	* tests/gobject/Makefile.am:
	* tests/gobject/singleton.c: added test program which demonstrates
	and checks singleton construction.

2006-08-15  Matthias Clasen  <mclasen@redhat.com>

	* glib/gbookmarkfile.c (g_bookmark_file_get_groups):
	* glib/gmain.c (g_source_is_destroyed): Add Since tags.
	* glib/gkeyfile.c (g_key_file_get_double_list): Fix
	Since tag.  (#351583, Brian Cameron)

	* configure.in: Bump version

	* === Released 2.12.2 ===

	* NEWS: Updates

2006-08-08  Emmanuele Bassi  <ebassi@gnome.org>

	* glib/gbookmarkfile.c (g_bookmark_file_remove_group)
	(g_bookmark_file_set_app_info): Plug a couple of leaks