@@ -1,3 +1,10 @@
+2006-09-01  Matthias Clasen  <mclasen@redhat.com>
+
+	* configure.in: Check for CLOCK_MONOTONIC.
+
+	* glib/gtimer.c: Only use clock_gettime if we
+	have a monotonic clock.
+
 2006-08-31  Matthias Clasen  <mclasen@redhat.com>
 
 	* configure.in: Add missing includes to a few test
